// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionsDropdown should render correctly 1`] = `
<Dropdown
  className="foo"
  onOpen={[MockFunction]}
  overlay={
    <ul
      className="menu"
    >
      <span>
        Hello world
      </span>
    </ul>
  }
  overlayPlacement="bottom"
>
  <Button
    className="dropdown-toggle bar button-small"
  >
    <SettingsIcon
      size={12}
    />
    <DropdownIcon
      className="little-spacer-left"
    />
  </Button>
</Dropdown>
`;

exports[`ActionsDropdown should render correctly 2`] = `
<Dropdown
  className="foo"
  onOpen={[MockFunction]}
  overlay={
    <ul
      className="menu"
    >
      <span>
        Hello world
      </span>
    </ul>
  }
  overlayPlacement="bottom"
>
  <Button
    className="dropdown-toggle bar"
  >
    <SettingsIcon
      size={14}
    />
    <DropdownIcon
      className="little-spacer-left"
    />
  </Button>
</Dropdown>
`;

exports[`ActionsDropdownDivider should render correctly 1`] = `
<li
  className="divider"
/>
`;

exports[`ActionsDropdownItem should render correctly 1`] = `
<li>
  <ButtonPlain
    className="foo"
    onClick={[Function]}
    preventDefault={true}
  >
    <span>
      Hello world
    </span>
  </ButtonPlain>
</li>
`;

exports[`ActionsDropdownItem should render correctly 2`] = `
<li>
  <ForwardRef(Link)
    className="foo text-danger"
    id="baz"
    to="path/name"
  >
    <span>
      Hello world
    </span>
  </ForwardRef(Link)>
</li>
`;

exports[`ActionsDropdownItem should render correctly 3`] = `
<li>
  <a
    className="foo"
    download="foo/bar"
    href="path/name"
  >
    <span>
      Hello world
    </span>
  </a>
</li>
`;
